syntax = "proto3";

package postsProto;

message CreatePostType {
  string postId = 1;
}

message Response {
  string message = 1;
  bool success = 2;
}

service PostsService {
  rpc CreatePost(CreatePostType) returns (Response);
}
