syntax = "proto3";

package commentsProto;

message Comments {
	repeated string comments = 1;
}

message GetCommentRequest {
	string postId = 1;
}


service CommentsService {
	rpc GetComments(GetCommentRequest) returns (Comments) {};
}

